--- a/index.css
+++ b/index.css
@@ -1,1 +1,21 @@
+* {
+    background-color: black;
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0%;
+    padding: 0%;
+}
+
+h1 {
+    color: red;
+
+}
+
+
+
+
+
+
+
+
+
 
