--- a/index.css
+++ b/index.css
@@ -5,12 +5,15 @@
     padding: 0%;
 }
 
-.name h1 {
-    
+.name {
+    background-color: darkolivegreen;
     margin: 10px;
     padding: 10px;
     color: red;
-    
+}
+h1 {
+    color: red;
+
 }
 
 
