--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@
     background-color: darkolivegreen;
     margin: 10px;
     padding: 10px;
-    color: red;
+    color: #919191;
+    
 }
 h1 {
     color: red;
