--- a/index.css
+++ b/index.css
@@ -1,16 +1,13 @@
 * {
     background-color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0%;
     padding: 0%;
 }
-
 .name {
-    background-color: darkolivegreen;
-    margin: 10px;
-    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    padding: 50px;
     color: #919191;
-    
 }
 h1 {
     color: red;
