--- a/index.css
+++ b/index.css
@@ -1,21 +1,29 @@
 * {
     background-color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: cursive;
     margin: 0%;
     padding: 0%;
 }
 .name {
     background-color: rgb(0, 0, 0);
     padding: 50px;
-    color: #919191;
+    color: #000000;
 }
 h1 {
     color: red;
 
 }
 
+.about {
+    padding: 50px;
+    
+}
+h5 { color: red;}
+.p {
+    color: red;
+    font-family: cursive;
 
-
+}
 
 
 
