--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 .name {
     background-color: rgb(0, 0, 0);
     padding: 100px;
-    padding-top: 200px;
+    padding-top: 100%;
     color: #000000;
 }
 h1 {
