--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 * {
+
     background-color: black;
     font-family: cursive;
     margin: 0%;
@@ -6,10 +7,12 @@
 
 }
 .name {
+    
     background-color: rgb(0, 0, 0);
     padding: 100px;
     padding-top: 100%;
-    color: #000000;
+    color: hsl(255, 5%, 15%);
+    
 }
 h1 {
     color: red;
