--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
 
-    background-color: black;
+    background-color: hsla(0, 0%, 27%, 0.836);
+    background-position: 1px;
     font-family: cursive;
     margin: 0%;
     padding: 0%;
