--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 * {
-
     background-color: hsla(0, 0%, 27%, 0.836);
     background-position: 1px;
     font-family: cursive;
@@ -9,7 +8,7 @@
 }
 .name {
     
-    background-color: rgb(0, 0, 0);
+    background-color: hsla(0, 0%, 27%, 0.836);
     padding: 100px;
     padding-top: 100%;
     color: hsl(255, 5%, 15%);
