--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 * {
-    background-color: hsla(0, 0%, 27%, 0.836);
-    background-position: 1px;
+    background-color: gray;
     font-family: cursive;
     margin: 0%;
     padding: 0%;
