--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
     padding: 0%;
 
 }
+.body {
+    background-color: gray;
+    
+}
 .name {
     
     background-color: hsla(0, 0%, 27%, 0.836);
